--- a/playbook.yml
+++ b/playbook.yml
@@ -41,6 +41,7 @@
       lineinfile:
         dest: '/home/{{ user }}/.profile'
         state: present
+        create: yes
         regexp: '^export {{ item.key }}='
         line: 'export {{ item.key }}={{ item.value }}'
       with_items: '{{ env_vars | dict2items }}'
