--- a/playbook.yml
+++ b/playbook.yml
@@ -42,6 +42,7 @@
         dest: '/home/{{ user }}/.profile'
         state: present
         create: yes
+        owner: '{{ user }}'
         regexp: '^export {{ item.key }}='
         line: 'export {{ item.key }}={{ item.value }}'
       with_items: '{{ env_vars | dict2items }}'
