update env_vars.example.yml for 0.4.2 release

--- a/env_vars.example.yml
+++ b/env_vars.example.yml
@@ -4,4 +4,5 @@ AUTHORIZE_ENVIRONMENT: production/sandbox
 ALMA_REGION: na/eu/etc
 ALMA_API_KEY: alma api key
 CONNECTION_STRING: oracle connection string
-TABLE_NAME: oracle table name
+ALMA_TABLE_NAME: oracle table name for alma transactions
+AEON_TABLE_NAME: oracle table name for aeon transactions
